2008-10-08  Chong Yidong  <cyd@stupidchicken.com>

	* json.el (json-skip-whitespace): Fix last change.

2008-10-08  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs-unload-function): New function.

2008-10-08  Sven Joachim  <svenjoac@gmx.de>

	* eshell/em-cmpl.el, eshell/em-hist.el, eshell/em-ls.el:
	* eshell/esh-cmd.el, eshell/esh-ext.el, eshell/esh-io.el:
	For clarity, explicitly require cl.

2008-10-08  Michael Olson  <mwolson@gnu.org>

	* ibuffer.el (ibuffer-shrink-to-fit): Force redisplay, so that we
	can avoid a bad interaction with programs that add functions to
	the window-scroll-functions hook.  This fixes Bug #858.

2008-10-07  Chong Yidong  <cyd@stupidchicken.com>

	* startup.el (command-line): Use display-warning to warn about an
	init file error.
	(command-line-1): Remove init file error delay.

2008-10-07  Shigeru Fukaya  <shigeru.fukaya@gmail.com>

	* rx-new.el (rx-constituents): Change `anything' to call rx-anything.
	Change `not-wordchar' assignment to "\\W" from "[^[:word:]]".
	(rx-group-if): New function.
	(rx-parent): New variable.
	(rx-and, rx-or): Put shy groups only when necessary.
	(rx-bracket): Remove.
	(rx-anything): New function.
	(rx-any-delete-from-range, rx-any-condense-range)
	(rx-check-any-string): New functions.
	(rx-check-any): Return result as a list.  Don't convert chars to
	strings.  Don't prepend "\\" to "^".  Don't search for close bracket.
	Check char category string.  Call rx-form instead of rx-to-string.
	(rx-any): Rebuid to complete the function.
	(rx-check-not): Fix char category regexp pattern string.
	Call rx-form instead of rx-to-string.
	(rx-not): Call rx-form instead of rx-to-string.  Convert "[^]" to
	"[^^]".  Call regexp-quote for one char string when not called from
	rx-not.  Add "\\w", and toggle to upcase.  Add the case of
	"\\[SCBW]" to toggle.
	(rx-=, rx->=, rx-**, rx-repeat, rx-submatch): Call rx-form
	instead of rx-to-string.
	(rx-kleene): Call rx-form instead of rx-to-string.