@@ -1,3 +1,8 @@
+2008-10-09  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* vc-cvs.el (vc-cvs-dir-stay-local): New variable.
+	(vc-cvs-dir-status): Use it.
+
 2008-10-08  Chong Yidong  <cyd@stupidchicken.com>
 
 	* json.el (json-skip-whitespace): Fix last change.
